--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="STYLESHEET" type="text/css" href="style.css" media="all,handheld"/>
 </head><body><div class="line"><font size="5px"> 7starhd </font><br/><small>Best Quality</small></div>
 
-<center><div class="form"><a href=" https://4movierulz-tamil.github.io/isaimini-tamil/ "><font color="green">isaimini 2022 Download</font></a> - <a href=" https://4movierulz-plz.github.io/movierulz-wap/ / "><font color="green">Wap Movierulz Movies</font></a></div></center>
+<center><div class="form"><a href=" https://bolly4u.icgti.org/ "><font color="green">Bolly4u Movies Download</font></a> - <a href=" https://4movierulz-plz.github.io/movierulz-wap/ / "><font color="green">Wap Movierulz Movies</font></a></div></center>
 
 
 <div class="line">Hindi Mobil Movie Download</div>
